--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inicio</title>
+  <title>APM Bicicletas de bambú </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -47,7 +47,7 @@
           <li><a class="active " href="index.html">Inicio</a></li>
           <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">Planeación del Proyecto</a></li>
+              <li><a href="planeacion.html">Planeación del Proyecto</a></li>
               <li><a href="services.html">Evaluación económica de Proyectos</a></li>
               <li><a href="portfolio.html">Celda de manufactura Robotizadas</a></li>
               <li><a href="team.html">Digital Factory</a></li>
@@ -67,19 +67,18 @@
     <div id="heroCarousel" class="container carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
       <!-- Slide 1 -->
-      <div class="carousel-item active">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Proyecto Final APM 2021-1</h2>
-          <p class="animate__animated animate__fadeInUp">Fabricación Bicicleta</p>
+      <div class="carousel-item active" >
+        <div class="carousel-container" data-aos="fade-up">
+          <h2 >Proyecto Final APM 2021-1</h2>
+          <p >Se busca la resolución de un problema real de automatización aplicado a un proceso de manufactura. El desarrollo de este proyecto se apoya en los contenidos temáticos que abarca el curso buscando su integración y aplicación en la resolución de un problema transversal de automatización en producción. Para la versión 2021-1 el proceso definido es la fabricación de bicicletas.</p>
         </div>
       </div>
 
       <!-- Slide 2 -->
       <div class="carousel-item">
-        <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Fabricacion Bicicleta</h2>
-          <p class="animate__animated animate__fadeInUp">Bicicleta bla bla</p>
-          <a href="" class="btn-get-started animate__animated animate__fadeInUp">Read More</a>
+        <div class="carousel-container" data-aos="fade-up" >
+          <h2  >Fabricación de bicicletas</h2>
+          <p  >Cabe destacar que la fabricación de bicicletas se enfoca en movilidad urbana, con al menos dos referencias de productos. Además de identificar el proceso de fabricación, se identifican todas las etapas y de ellas se seleccionan 3 etapas claves automatizables, una de ellas con robotización.  Todo fundamentado en trabajo en equipo.</p>
         </div>
       </div>
 
@@ -93,51 +92,12 @@
 
     </div>
   </section><!-- End Hero -->
+  
+
 
   <main id="main">
 
-    <!-- ======= Services Section ======= -->
-    <section class="services">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
-            <div class="icon-box icon-box-pink">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Info</a></h4>
-              <p class="description">Info2</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon-box icon-box-cyan">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Info</a></h4>
-              <p class="description">Info2</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Info</a></h4>
-              <p class="description">Info2</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon-box icon-box-blue">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Info</a></h4>
-              <p class="description">Info2</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Services Section -->
-
+    
     <!-- ======= Why Us Section ======= -->
     <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
       <div class="container">
