--- a/planeacion.html
+++ b/planeacion.html
@@ -86,9 +86,9 @@
             A continuación, se presenta el cronograma del proyecto realizado en la herramienta Good Day.
           </p>
           <p class="fst-italic">
-            GoodDay es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
+            ClickUp™ es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
             nivel, la gestión de proyectos y productos, la organización de tareas y el crecimiento de la productividad.
-            GoodDay permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los resultados
+            ClickUp™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los resultados
             y los logros. Todo dentro de una plataforma.
           </p>
           <p class="fst-italic">
@@ -104,7 +104,7 @@
       <div class="section-title">
         <h2>GoodDay Cronograma</h2>
       </div>
-      <iframe src="https://share.goodday.work/cf354cf7-b24e-490e-8380-4f6987a85a5b" width="100%"
+      <iframe src="https://share.clickup.com/g/h/4-3196013-7/1ee165102ee716f" width="100%"
         height="1000px"></iframe>
     </div>
 
