--- a/index.html
+++ b/index.html
@@ -47,14 +47,17 @@
           <li><a class="active " href="index.html">Inicio</a></li>
           <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="planeacion.html">Planeación del Proyecto</a></li>
-              <li><a href="services.html">Evaluación económica de Proyectos</a></li>
-              <li><a href="portfolio.html">Celda de manufactura Robotizadas</a></li>
-              <li><a href="team.html">Digital Factory</a></li>
-              <li><a href="blog.html">Controladores industriales (PLC)</a></li>
+              <li><a href="planeacion.html">Gestión de Proyecto</a></li>
+              <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
+              <li><a href="indu4.0.html">Automatización e Industria 4.0</a></li>
+              <li><a href="celda.html">Celda de manufactura Robotizadas</a></li>
+              <li><a href="digitalf.html">Digital Factory</a></li>
+              <li><a href="controladores.html">Controladores industriales (PLC)</a></li>
+              <li><a href="actuadores.html">Actuadores en Automatización</a></li>
+              <li><a href="scada.html">Sistema de Supervisión SCADA</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contáctanos</a></li>
+          <li><a href="team.html">Contáctanos</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -85,7 +88,6 @@
       <a class="carousel-control-prev" href="#heroCarousel" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon bx bx-chevron-left" aria-hidden="true"></span>
       </a>
-
       <a class="carousel-control-next" href="#heroCarousel" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon bx bx-chevron-right" aria-hidden="true"></span>
       </a>
@@ -97,109 +99,104 @@
 
   <main id="main">
 
-    
-    <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+     <!-- ======= Features Section ======= -->
+     <section class="services">
       <div class="container">
 
+        <div class="section-title" data-aos="fade-up">
+          <h1>¿Por qué Bambú?</h1>
+        </div>
+        <div class="section-title" data-aos="fade-up">
+          <h2>Existen muchas razones, como ser un material natural, fuerte, ligero, recurso renovable, generador de oxigeno, absorve vibraciones del camino etc</h2>
+        </div>
+  
+          <div class="row">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
+              <div class="icon-box icon-box-green">
+                <div class="icon"><i class="bx bxs-tree"></i></div>
+                <h4 class="title"><a href="">GENERADOR DE OXÍGENO</a></h4>
+                <p class="description">El bambú genera 30% más oxígeno que los árboles, esto ayuda a reducir el exceso de CO2 que existe en la atmósfera.</p>
+              </div>
+            </div>
+  
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon-box icon-box-green">
+                <div class="icon"><i class="bx bx-wind"></i></div>
+                <h4 class="title"><a href="">RESISTENTE Y LIGERA</a></h4>
+                <p class="description">El bambú puede resistir hasta 1 ton/cm2 de compresión, esto, en comparación con lo que soporta el acero es el DOBLE. Además el bambú es múy ligero, haciéndolo un material ideal para la fabricación de bicicletas.</p>
+              </div>
+            </div>
+  
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+              <div class="icon-box icon-box-green">
+                <div class="icon"><i class="bx bx-fast-forward"></i></div>
+                <h4 class="title"><a href="">RAPIDEZ EN CRECIMIENTO</a></h4>
+                <p class="description">En solo 3 años el bambú alcanza su madurez, otras maderas tardan entre 15 y 25 años, como el pino. Esto hace del bambú un recurso altamente renovable.</p>
+              </div>
+            </div>
+  
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+              <div class="icon-box icon-box-green">
+                <div class="icon"><i class="bx bx-been-here"></i></div>
+                <h4 class="title"><a href="">SIN FATIGA</a></h4>
+                <p class="description">El bambú no es susceptibles a la fatiga, esto significa que con el uso la bicicleta no va a acumular deterioro.</p>
+              </div>
+            </div>
+  
+          </div>
+  
+      </div>
+
+      <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
-            <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <img src="assets/img/bambu2.jpg" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Info Video 1</a></h4>
-              <p class="description">Info video 2</p>
+              <h4 class="title"><a href="">El bambú</a></h4>
+              <p class="description">El bambú resiste hasta 1 ton/cm2 en compresión, el doble que el acero. Es ideal para hacer bicicletas, esto es por que es muy ligero y por su estructura interna absorbe hasta 4 veces más vibraciones del camino que la fibra de carbono, haciendo las bicicletas más cómodas, sobre todo, para viajes largos.
+
+                El bambú no es  subeptibles a la fatiga. La fatiga es la característica de ciertos materiales para perder propiedades de resitencia cuando son sometidos a esfurezos. El bambú  no sufre esta pérdida, mantienen sus propiedades a través del tiempo.</p>
             </div>
 
-            <div class="icon-box">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Info video 2</a></h4>
-              <p class="description">Info video 2</p>
-            </div>
 
           </div>
         </div>
 
       </div>
-    </section><!-- End Why Us Section -->
-
-    <!-- ======= Features Section ======= -->
-    <section class="features">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Información Importante</h2>
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-md-5">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
-          </div>
-          <div class="col-md-7 pt-4">
-            <h3>Informacion 123</h3>
-            <p class="fst-italic">
-              Iinformacion 123
-            </p>
-            <ul>
-              <li><i class="bi bi-check"></i> Info 1</li>
-              <li><i class="bi bi-check"></i> Info 2</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="row" data-aos="fade-up">
-          <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features-2.svg" class="img-fluid" alt="">
-          </div>
-          <div class="col-md-7 pt-5 order-2 order-md-1">
-            <h3>Informacion 123</h3>
-            <p class="fst-italic">
-              Informacion 123
-            </p>
-            <p>
-             Infomacion
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Features Section -->
+    </section>
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+<!-- ======= Footer ======= -->
+<footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copy
-      </div>
-      <div class="credits">
-        APM
-        <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
-      </div>
+  <div class="container">
+    <div class="credits">
+      Repositorio de Trabajo en Github (Enlace)
+      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
     </div>
-  </footer><!-- End Footer -->
+  </div>
+</footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+    class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+<!-- Vendor JS Files -->
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="assets/vendor/purecounter/purecounter.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 
 </body>
 
