--- a/planeacion.html
+++ b/planeacion.html
@@ -42,22 +42,26 @@
         <h1 class="text-light"><a href="index.html"><span>Proyecto Final APM 2021-1</span></a></h1>
       </div>
 
+
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li class="dropdown"><a class="active " href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="active " href="index.html">Inicio</a></li>
+          <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="planeacion.html">Planeación del Proyecto</a></li>
-              <li><a href="services.html">Evaluación económica de Proyectos</a></li>
-              <li><a href="portfolio.html">Celda de manufactura Robotizadas</a></li>
-              <li><a href="team.html">Digital Factory</a></li>
-              <li><a href="blog.html">Controladores industriales (PLC)</a></li>
+              <li><a href="planeacion.html">Gestión de Proyecto</a></li>
+              <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
+              <li><a href="indu4.0.html">Automatización e Industria 4.0</a></li>
+              <li><a href="celda.html">Celda de manufactura Robotizadas</a></li>
+              <li><a href="digitalf.html">Digital Factory</a></li>
+              <li><a href="controladores.html">Controladores industriales (PLC)</a></li>
+              <li><a href="actuadores.html">Actuadores en Automatización</a></li>
+              <li><a href="scada.html">Sistema de Supervisión SCADA</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contáctanos</a></li>
+          <li><a href="team.html">Contáctanos</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>
+      </nav><!-- .navbar -->
 
     </div>
   </header>
@@ -86,9 +90,10 @@
             A continuación, se presenta el cronograma del proyecto realizado en la herramienta Good Day.
           </p>
           <p class="fst-italic">
-            ClickUp™ es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
+            GoodDay es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
             nivel, la gestión de proyectos y productos, la organización de tareas y el crecimiento de la productividad.
-            ClickUp™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los resultados
+            ClickUp™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los
+            resultados
             y los logros. Todo dentro de una plataforma.
           </p>
           <p class="fst-italic">
@@ -104,7 +109,7 @@
       <div class="section-title">
         <h2>GoodDay Cronograma</h2>
       </div>
-      <iframe src="https://share.clickup.com/g/h/4-3196013-7/1ee165102ee716f" width="100%"
+      <iframe src="https://share.goodday.work/cf354cf7-b24e-490e-8380-4f6987a85a5b" width="100%"
         height="1000px"></iframe>
     </div>
 
