--- a/team.html
+++ b/team.html
@@ -44,17 +44,20 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a  href="index.html">Inicio</a></li>
-          <li class="dropdown"><a class="active "href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="active " href="index.html">Inicio</a></li>
+          <li class="dropdown"><a href="#"><span>Módulos</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">Planeación del Proyecto</a></li>
-              <li><a href="services.html">Evaluación económica de Proyectos</a></li>
-              <li><a href="portfolio.html">Celda de manufactura Robotizadas</a></li>
-              <li><a href="team.html">Digital Factory</a></li>
-              <li><a href="blog.html">Controladores industriales (PLC)</a></li>
+              <li><a href="planeacion.html">Gestión de Proyecto</a></li>
+              <li><a href="planta.html">Gestión de Producción y Automatización</a></li>
+              <li><a href="indu4.0.html">Automatización e Industria 4.0</a></li>
+              <li><a href="celda.html">Celda de manufactura Robotizadas</a></li>
+              <li><a href="digitalf.html">Digital Factory</a></li>
+              <li><a href="controladores.html">Controladores industriales (PLC)</a></li>
+              <li><a href="actuadores.html">Actuadores en Automatización</a></li>
+              <li><a href="scada.html">Sistema de Supervisión SCADA</a></li>
             </ul>
           </li>
-          <li><a href="contact.html">Contáctanos</a></li>
+          <li><a href="team.html">Contáctanos</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -62,9 +65,9 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <!--<main id="main">
 
-    <!-- ======= Our Team Section ======= -->
+    <!-- ======= Our Team Section ======= 
     <section class="breadcrumbs">
       <div class="container">
 
@@ -77,9 +80,9 @@
         </div>
 
       </div>
-    </section><!-- End Our Team Section -->
+    </section>
 
-    <!-- ======= Team Section ======= -->
+    <!-- ======= Team Section ======= 
     <section class="team" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="container">
 
@@ -202,39 +205,37 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section>
 
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+<!-- ======= Footer ======= -->
+<footer id="footer" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copy
-      </div>
-      <div class="credits">
-        APM
-        <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
-      </div>
+  <div class="container">
+    <div class="credits">
+      Repositorio de Trabajo en Github (Enlace)
+      <a href="https://github.com/APM2021-1" class="github"><i class="bx bxl-github"></i></a>
     </div>
-  </footer><!-- End Footer -->
+  </div>
+</footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+    class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/purecounter/purecounter.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+<!-- Vendor JS Files -->
+<script src="assets/vendor/aos/aos.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+<script src="assets/vendor/php-email-form/validate.js"></script>
+<script src="assets/vendor/purecounter/purecounter.js"></script>
+<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+<!-- Template Main JS File -->
+<script src="assets/js/main.js"></script>
 
 </body>
 
-</html>
+</html>>
