--- a/indu4.0.html
+++ b/indu4.0.html
@@ -93,18 +93,18 @@
           <div class="col-lg-6 video-box">
             <div class="content" data-aos="fade-up" date-aos-delay="200">
               <div class="images">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0002.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0003.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0004.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0005.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0006.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0007.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0008.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0009.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0010.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0011.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0012.jpg">
-                <img class="mySlides1" src="assets/img/Ind4.0/I_page-0013.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0002.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0003.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0004.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0005.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0006.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0007.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0008.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0009.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0010.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0011.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0012.jpg">
+                <img class="1" src="assets/img/Ind4.0/I_page-0013.jpg">
               </div>
             </div>
           </div>
@@ -136,13 +136,13 @@
           <div class="col-lg-6 video-box">
             <div class="content" data-aos="fade-up" date-aos-delay="200">
               <div class="images">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0014.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0015.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0016.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0017.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0018.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0019.jpg">
-                <img class="mySlides" src="assets/img/Ind4.0/I_page-0020.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0014.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0015.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0016.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0017.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0018.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0019.jpg">
+                <img class="2" src="assets/img/Ind4.0/I_page-0020.jpg">
               </div>
             </div>
           </div>
@@ -192,28 +192,14 @@
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script>
-    var slideIndex = 0;
-    carousel();
-    function carousel() {
-      var i;
-      var x = document.getElementsByClassName("mySlides");
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > x.length) { slideIndex = 1 }
-      x[slideIndex - 1].style.display = "block";
-      setTimeout(carousel, 1000);
-    }
-  </script>
+
 
   <script>
     var slideIndex = 0;
     carousel1();
     function carousel1() {
-      var i;
-      var x = document.getElementsByClassName("mySlides1");
+      var i=0;
+      var x = document.getElementsByClassName("1");
       for (i = 0; i < x.length; i++) {
         x[i].style.display = "none";
       }
@@ -223,6 +209,22 @@
       setTimeout(carousel1, 1000);
     }
   </script>
+
+<script>
+  var slide = 0;
+  carousel();
+  function carousel() {
+    var i=0;
+    var y = document.getElementsByClassName("2");
+    for (i = 0; i < y.length; i++) {
+      y[i].style.display = "none";
+    }
+    slide++;
+    if (slide > y.length) { slide = 1 }
+    y[slide - 1].style.display = "block";
+    setTimeout(carousel, 1000);
+  }
+</script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
