--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bx bxs-tree"></i></div>
                 <h4 class="title"><a href="">GENERADOR DE OXÍGENO</a></h4>
-                <p class="description">El bambú genera 30% más oxígeno que los árboles, esto ayuda a reducir el exceso de CO2 que existe en la atmósfera.</p>
+                <p class="description">Previo a la fabricación de la bicicleta se hace necesario la plantación del bambú, este genera 30% más oxígeno que los árboles ayudadno a reducir el exceso de CO2 que existe en la atmósfera.</p>
               </div>
             </div>
   
@@ -123,7 +123,7 @@
               <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bx bx-wind"></i></div>
                 <h4 class="title"><a href="">RESISTENTE Y LIGERA</a></h4>
-                <p class="description">El bambú puede resistir hasta 1 ton/cm2 de compresión, esto, en comparación con lo que soporta el acero es el DOBLE. Además el bambú es múy ligero, haciéndolo un material ideal para la fabricación de bicicletas.</p>
+                <p class="description">El bambú es más fuerte que el acero en lo que respecta a la resistencia a la tracción. El acero tiene una resistencia a la tracción de 23.000 libras por pulgada cuadrada, mientras que el bambú supera al acero con un valor de 28.000 libras por pulgada. </p>
               </div>
             </div>
   
@@ -139,7 +139,7 @@
               <div class="icon-box icon-box-green">
                 <div class="icon"><i class="bx bx-been-here"></i></div>
                 <h4 class="title"><a href="">SIN FATIGA</a></h4>
-                <p class="description">El bambú no es susceptibles a la fatiga, esto significa que con el uso la bicicleta no va a acumular deterioro.</p>
+                <p class="description">Las secciones de la caña de bambú cargadas en paralelo al eje de la caña no sufrien fallas por fatiga.</p>
               </div>
             </div>
   
@@ -157,7 +157,7 @@
 
             <div class="icon-box">
               <h4 class="title"><a href="">El bambú</a></h4>
-              <p class="description">El bambú resiste hasta 1 ton/cm2 en compresión, el doble que el acero. Es ideal para hacer bicicletas, esto es por que es muy ligero y por su estructura interna absorbe hasta 4 veces más vibraciones del camino que la fibra de carbono, haciendo las bicicletas más cómodas, sobre todo, para viajes largos.
+              <p class="description"> Es ideal para hacer bicicletas, esto es por que es muy ligero y absorbe la vibración del suelo, por lo tanto los músculos y las articulaciones sufren menos tensión que con una bicicleta de acero o aluminio haciendo las bicicletas más cómodas, sobre todo, para viajes largos.
 
                 El bambú no es  subeptibles a la fatiga. La fatiga es la característica de ciertos materiales para perder propiedades de resitencia cuando son sometidos a esfurezos. El bambú  no sufre esta pérdida, mantienen sus propiedades a través del tiempo.</p>
             </div>
