--- a/planeacion.html
+++ b/planeacion.html
@@ -92,7 +92,7 @@
           <p class="fst-italic">
             GoodDay es una plataforma de gestión del trabajo que reúne las herramientas para la planificación de alto
             nivel, la gestión de proyectos y productos, la organización de tareas y el crecimiento de la productividad.
-            ClickUp™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los
+            GoodDay™ permite organizar y administrar la ejecución de proyectos y realizar un seguimiento a los
             resultados
             y los logros. Todo dentro de una plataforma.
           </p>
