--- a/team.html
+++ b/team.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>TeC</title>
+  <title>Proceso de aprendizaje</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -65,24 +65,24 @@
     </div>
   </header><!-- End Header -->
 
-  <!--<main id="main">
+  <main id="main">
 
-    <!-- ======= Our Team Section ======= 
+    <!-- ======= Our Team Section =======-->
     <section class="breadcrumbs">
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Our Team</h2>
+          <h2>Proceso de aprendizaje</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Our Team</li>
+            <li>Proceso de aprendizaje</li>
           </ol>
         </div>
 
       </div>
     </section>
 
-    <!-- ======= Team Section ======= 
+    <!-- ======= Team Section =======--> 
     <section class="team" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
       <div class="container">
 
