--- a/planta.html
+++ b/planta.html
@@ -126,7 +126,7 @@
             <div class="icon-box">
 
               <h4 class="title">Piezas a fabricar.</h4>
-              <ul class="columns" data-columns="2">
+              <ul class="three">
                 <li>Tubo superior.</li>
                 <li>Tubo inferior.</li>
                 <li>Tubo asiento.</li>
@@ -140,7 +140,7 @@
                 <li>Punteras delanteras y traseras.</li>
             </ul>
             <h4 class="title">Piezas adquiridas.</h4>
-            <ul class="columns" data-columns="2">
+            <ul class="three">
               <li>Cadena.</li>
               <li>Estrella.</li>
               <li>Pedal.</li>
