--- a/indu4.0.html
+++ b/indu4.0.html
@@ -86,12 +86,12 @@
     </section><!-- End Our Portfolio Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+    <section class="service-details" data-aos="fade-up" date-aos-delay="200">
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 video-box">
-            <div class="content" data-aos="fade-up" date-aos-delay="200">
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
               <div class="images">
                 <img class="1" src="assets/img/Ind4.0/I_page-0002.jpg">
                 <img class="1" src="assets/img/Ind4.0/I_page-0003.jpg">
@@ -106,25 +106,37 @@
                 <img class="1" src="assets/img/Ind4.0/I_page-0012.jpg">
                 <img class="1" src="assets/img/Ind4.0/I_page-0013.jpg">
               </div>
+
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
+              <div class="content" data-aos="fade-up" date-aos-delay="200">
+                <div class="images">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0014.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0015.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0016.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0017.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0018.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0019.jpg">
+                  <img class="2" src="assets/img/Ind4.0/I_page-0020.jpg">
+                </div>
+              </div>
+            </div>
+
+          </div>
+      </div>
+
+
+        <div class="card-img">
+            <div class="content" data-aos="fade-up" date-aos-delay="200">
+
             </div>
           </div>
 
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
-
-            <div class="icon-box">
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-                occaecati cupiditate non provident</p>
-            </div>
-
-            <div class="icon-box">
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
-            </div>
-
+            <div class="card-img">
+                
           </div>
-        </div>
 
       </div>
     </section>
@@ -132,36 +144,15 @@
     <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
       <div class="container">
 
-        <div class="row">
-          <div class="col-lg-6 video-box">
-            <div class="content" data-aos="fade-up" date-aos-delay="200">
-              <div class="images">
-                <img class="2" src="assets/img/Ind4.0/I_page-0014.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0015.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0016.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0017.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0018.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0019.jpg">
-                <img class="2" src="assets/img/Ind4.0/I_page-0020.jpg">
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
 
             <div class="icon-box">
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
-                occaecati cupiditate non provident</p>
+              <p class="description">Para el manejo de la el sistema de comunicación, se instalara lo diferentes software en los diferentes equipos de los estudiantes del equipo de trabajo:</p>
+              <ul >
+                <li>RobotStudio: Angel Diaz y Gabriel Acevedo</li>
+                <li>Studio5000: Felipe Romero y Sergio Quintero.</li>
+                <li>Siemens NX: Álvaro Chaves .</li>
+            </ul>
             </div>
-
-            <div class="icon-box">
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                praesentium voluptatum deleniti atque</p>
-            </div>
-
-          </div>
         </div>
 
       </div>
