--- a/indu4.0.html
+++ b/indu4.0.html
@@ -146,7 +146,7 @@
 
 
             <div class="icon-box">
-              <p class="description">Para el manejo de la el sistema de comunicación, se instalara lo diferentes software en los diferentes equipos de los estudiantes del equipo de trabajo:</p>
+              <p class="description">Para el manejo del sistema de comunicación, se instalaran lo diferentes software en los diferentes equipos de los estudiantes del equipo de trabajo:</p>
               <ul >
                 <li>RobotStudio: Angel Diaz y Gabriel Acevedo</li>
                 <li>Studio5000: Felipe Romero y Sergio Quintero.</li>
